--- a/ios/AudioPlayer/AudioPlayer/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/ios/AudioPlayer/AudioPlayer/en.lproj/MainStoryboard_iPhone.storyboard
@@ -104,7 +104,7 @@
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <connections>
-                                    <segue destination="xjP-Xl-yT8" kind="push" identifier="toDetail" id="D1o-0i-Dcl"/>
+                                    <segue destination="xjP-Xl-yT8" kind="push" identifier="toDetail" id="sem-Sk-FhK"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -158,7 +158,7 @@
             <objects>
                 <viewController id="xjP-Xl-yT8" customClass="DetailViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VkE-X3-2N0">
-                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bPX-E5-HMW">
@@ -238,6 +238,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="L0Y-wb-oxk"/>
+        <segue reference="sem-Sk-FhK"/>
     </inferredMetricsTieBreakers>
 </document>
