--- a/ios/AudioPlayer/AudioPlayer/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/ios/AudioPlayer/AudioPlayer/en.lproj/MainStoryboard_iPhone.storyboard
@@ -174,14 +174,63 @@
                                     <action selector="play:" destination="xjP-Xl-yT8" eventType="touchUpInside" id="IJz-zU-H5y"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Current Time:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zde-PG-fG0">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Y8l-1W-ZPQ">
+                                <connections>
+                                    <action selector="currentTimeSliderDidChanged:" destination="xjP-Xl-yT8" eventType="valueChanged" id="bCL-cI-Lt5"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Rate:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ge7-af-AhS">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="nMO-eq-FI1">
+                                <connections>
+                                    <action selector="rateSliderDidChanged:" destination="xjP-Xl-yT8" eventType="valueChanged" id="zWP-Eo-dXO"/>
+                                </connections>
+                            </slider>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Amf-eo-iEY">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Stop">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="stop:" destination="xjP-Xl-yT8" eventType="touchUpInside" id="I95-Fj-8x8"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Ge7-af-AhS" firstAttribute="leading" secondItem="VkE-X3-2N0" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="6xr-6a-DLT"/>
                             <constraint firstItem="bPX-E5-HMW" firstAttribute="top" secondItem="VkE-X3-2N0" secondAttribute="top" constant="20" symbolic="YES" type="default" id="7uK-rm-ZFM"/>
+                            <constraint firstItem="Zde-PG-fG0" firstAttribute="top" secondItem="bPX-E5-HMW" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="9cA-4N-TaD"/>
+                            <constraint firstAttribute="trailing" secondItem="Y8l-1W-ZPQ" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="9sb-yp-S88"/>
+                            <constraint firstItem="Y8l-1W-ZPQ" firstAttribute="leading" secondItem="VkE-X3-2N0" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Aak-eP-EF3"/>
+                            <constraint firstItem="Amf-eo-iEY" firstAttribute="top" secondItem="VkE-X3-2N0" secondAttribute="top" constant="20" symbolic="YES" type="default" id="Acn-al-VH2"/>
+                            <constraint firstItem="Zde-PG-fG0" firstAttribute="leading" secondItem="VkE-X3-2N0" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="BER-8d-6Bx"/>
+                            <constraint firstItem="nMO-eq-FI1" firstAttribute="top" secondItem="Ge7-af-AhS" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="DzB-1z-JJW"/>
+                            <constraint firstAttribute="trailing" secondItem="nMO-eq-FI1" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="OYD-qq-hNB"/>
+                            <constraint firstItem="Amf-eo-iEY" firstAttribute="leading" secondItem="bPX-E5-HMW" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="RJO-Vy-S4Q"/>
+                            <constraint firstItem="nMO-eq-FI1" firstAttribute="leading" secondItem="VkE-X3-2N0" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Wmz-Q7-r5L"/>
+                            <constraint firstItem="Y8l-1W-ZPQ" firstAttribute="top" secondItem="Zde-PG-fG0" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="Yyi-nb-ftf"/>
+                            <constraint firstItem="Ge7-af-AhS" firstAttribute="top" secondItem="Y8l-1W-ZPQ" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="cPX-re-Dnq"/>
                             <constraint firstItem="bPX-E5-HMW" firstAttribute="leading" secondItem="VkE-X3-2N0" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="stD-uV-1iy"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="wqn-UE-4jW"/>
+                    <connections>
+                        <outlet property="currentTimeSlider" destination="Y8l-1W-ZPQ" id="i15-SN-y87"/>
+                        <outlet property="rateSlider" destination="nMO-eq-FI1" id="hjj-lN-g3E"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="828-F4-uSG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -219,7 +268,12 @@
         <class className="DetailViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailViewController.h"/>
             <relationships>
+                <relationship kind="action" name="currentTimeSliderDidChanged:"/>
                 <relationship kind="action" name="play:"/>
+                <relationship kind="action" name="rateSliderDidChanged:"/>
+                <relationship kind="action" name="stop:"/>
+                <relationship kind="outlet" name="currentTimeSlider" candidateClass="UISlider"/>
+                <relationship kind="outlet" name="rateSlider" candidateClass="UISlider"/>
             </relationships>
         </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
